--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,16 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.1",
-    "hardhat": "^2.12.7"
+    "hardhat": "^2.12.7",
+    "hardhat-deploy": "^0.11.23",
+    "hardhat-gas-reporter": "^1.0.7",
+    "solidity-coverage": "^0.8.2"
+  },
+  "dependencies": {
+    "@aave/core-v3": "^1.17.2",
+    "@aave/protocol-v2": "^1.0.1",
+    "@chainlink/contracts": "^0.6.1",
+    "@openzeppelin/contracts": "^4.8.1",
+    "dotenv": "^14.2.0"
   }
 }
